// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`completion, renders custom styles: base 1`] = `
<View>
  <View
    onResponderRelease={[Function]}
    onStartShouldSetResponder={[Function]}
    pointerEvents="auto"
    style={
      Array [
        Object {
          "margin": 10,
          "paddingHorizontal": 16,
        },
      ]
    }
  >
    <View
      style={
        Object {
          "backgroundColor": "transparent",
          "borderBottomColor": "rgba(0, 0, 0, 0.38)",
          "borderBottomWidth": 0.5,
          "height": 64,
          "paddingBottom": 8,
          "paddingTop": 32,
          "zIndex": 1,
        }
      }
    >
      <View
        onLayout={[Function]}
        style={
          Object {
            "position": "absolute",
            "top": 0,
            "transform": Array [
              Object {
                "translateX": 0,
              },
              Object {
                "translateY": 36,
              },
              Object {
                "scale": 1,
              },
            ],
          }
        }
      >
        <Text
          numberOfLines={1}
          style={
            Object {
              "color": "rgba(0, 0, 0, 0.38)",
              "fontFamily": "Roboto",
              "fontSize": 16,
            }
          }
        >
          Name
          <Text
            style={
              Object {
                "color": "#cc294e",
              }
            }
          >
             *
          </Text>
        </Text>
      </View>
      <View
        style={
          Object {
            "flexDirection": "row",
          }
        }
      >
        <TextInput
          affixTextStyle={
            Object {
              "fontFamily": "Roboto",
            }
          }
          allowFontScaling={true}
          autoCapitalize="sentences"
          clearButtonMode="while-editing"
          disableFullscreenUI={true}
          editable={true}
          innerRef={[Function]}
          onBlur={[Function]}
          onChange={[Function]}
          onChangeText={[Function]}
          onContentSizeChange={[Function]}
          onFocus={[Function]}
          rejectResponderTermination={true}
          renderAdditionalHint={[Function]}
          selectionColor="#146ac4"
          style={
            Array [
              Object {
                "flex": 1,
                "margin": 0,
                "padding": 0,
                "top": 2,
              },
              Object {
                "color": "blue",
                "fontSize": 16,
                "height": 24,
                "textAlign": "left",
              },
              undefined,
            ]
          }
          textContentType="none"
          theme="light"
          underlineColorAndroid="transparent"
          value=""
        />
      </View>
    </View>
    <View
      style={
        Object {
          "flexDirection": "row",
        }
      }
    >
      <View
        style={
          Object {
            "flex": 1,
          }
        }
      >
        <View
          style={
            Object {
              "alignItems": "flex-start",
              "paddingVertical": 4,
            }
          }
        >
          <Text
            style={
              Object {
                "backgroundColor": "transparent",
                "color": "rgba(0, 0, 0, 0.38)",
                "fontFamily": "Roboto",
                "fontSize": 15,
              }
            }
          >
            Test hint
          </Text>
        </View>
      </View>
    </View>
  </View>
</View>
`;

exports[`completion, renders custom styles: disabled 1`] = `
<View>
  <View
    onResponderRelease={[Function]}
    onStartShouldSetResponder={[Function]}
    pointerEvents="none"
    style={
      Array [
        Object {
          "margin": 12,
          "paddingHorizontal": 16,
        },
      ]
    }
  >
    <View
      style={
        Object {
          "backgroundColor": "transparent",
          "height": 64,
          "overflow": "hidden",
          "paddingBottom": 8,
          "paddingTop": 32,
          "zIndex": 1,
        }
      }
    >
      <View
        pointerEvents="none"
        style={
          Array [
            Object {
              "borderRadius": 2.220446049250313e-16,
              "position": "absolute",
            },
            Object {
              "borderColor": "rgba(0, 0, 0, 0.12)",
              "borderStyle": "dotted",
              "borderWidth": 1,
              "bottom": 0,
              "left": -1.5,
              "right": -1.5,
              "top": -2,
            },
          ]
        }
      />
      <View
        onLayout={[Function]}
        style={
          Object {
            "position": "absolute",
            "top": 0,
            "transform": Array [
              Object {
                "translateX": 0,
              },
              Object {
                "translateY": 36,
              },
              Object {
                "scale": 1,
              },
            ],
          }
        }
      >
        <Text
          numberOfLines={1}
          style={
            Object {
              "color": "rgba(204, 41, 78, 1)",
              "fontFamily": "Roboto",
              "fontSize": 16,
            }
          }
        >
          Name
          <Text
            style={
              Object {
                "color": "#cc294e",
              }
            }
          >
             *
          </Text>
        </Text>
      </View>
      <View
        style={
          Object {
            "flexDirection": "row",
          }
        }
      >
        <TextInput
          affixTextStyle={
            Object {
              "fontFamily": "Roboto",
            }
          }
          allowFontScaling={true}
          autoCapitalize="sentences"
          clearButtonMode="while-editing"
          disableFullscreenUI={true}
          editable={false}
          error="Error"
          innerRef={[Function]}
          onBlur={[Function]}
          onChange={[Function]}
          onChangeText={[Function]}
          onContentSizeChange={[Function]}
          onFocus={[Function]}
          rejectResponderTermination={true}
          renderAdditionalHint={[Function]}
          selectionColor="#146ac4"
          style={
            Array [
              Object {
                "flex": 1,
                "margin": 0,
                "padding": 0,
                "top": 2,
              },
              Object {
                "color": "rgba(0, 0, 0, 0.12)",
                "fontSize": 16,
                "height": 24,
                "textAlign": "left",
              },
              undefined,
            ]
          }
          textContentType="none"
          theme="light"
          underlineColorAndroid="transparent"
          value=""
        />
      </View>
    </View>
    <View
      style={
        Object {
          "flexDirection": "row",
        }
      }
    >
      <View
        style={
          Object {
            "flex": 1,
          }
        }
      >
        <View
          style={
            Object {
              "alignItems": "flex-start",
              "paddingVertical": 4,
            }
          }
        >
          <Text
            style={
              Object {
                "backgroundColor": "transparent",
                "color": "#cc294e",
                "fontFamily": "Roboto",
                "fontSize": 17,
              }
            }
          >
            Error
          </Text>
        </View>
      </View>
    </View>
  </View>
</View>
`;

exports[`completion, renders custom styles: errored 1`] = `
<View>
  <View
    onResponderRelease={[Function]}
    onStartShouldSetResponder={[Function]}
    pointerEvents="auto"
    style={
      Array [
        Object {
          "margin": 11,
          "paddingHorizontal": 16,
        },
      ]
    }
  >
    <View
      style={
        Object {
          "backgroundColor": "transparent",
          "borderBottomColor": "rgba(204, 41, 78, 1)",
          "borderBottomWidth": 2,
          "height": 64,
          "paddingBottom": 8,
          "paddingTop": 32,
          "zIndex": 1,
        }
      }
    >
      <View
        onLayout={[Function]}
        style={
          Object {
            "position": "absolute",
            "top": 0,
            "transform": Array [
              Object {
                "translateX": 0,
              },
              Object {
                "translateY": 36,
              },
              Object {
                "scale": 1,
              },
            ],
          }
        }
      >
        <Text
          numberOfLines={1}
          style={
            Object {
              "color": "rgba(204, 41, 78, 1)",
              "fontFamily": "Roboto",
              "fontSize": 16,
            }
          }
        >
          Name
          <Text
            style={
              Object {
                "color": "#cc294e",
              }
            }
          >
             *
          </Text>
        </Text>
      </View>
      <View
        style={
          Object {
            "flexDirection": "row",
          }
        }
      >
        <TextInput
          affixTextStyle={
            Object {
              "fontFamily": "Roboto",
            }
          }
          allowFontScaling={true}
          autoCapitalize="sentences"
          clearButtonMode="while-editing"
          disableFullscreenUI={true}
          editable={true}
          error="Error"
          innerRef={[Function]}
          onBlur={[Function]}
          onChange={[Function]}
          onChangeText={[Function]}
          onContentSizeChange={[Function]}
          onFocus={[Function]}
          rejectResponderTermination={true}
          renderAdditionalHint={[Function]}
          selectionColor="#146ac4"
          style={
            Array [
              Object {
                "flex": 1,
                "margin": 0,
                "padding": 0,
                "top": 2,
              },
              Object {
                "color": "orange",
                "fontSize": 16,
                "height": 24,
                "textAlign": "left",
              },
              undefined,
            ]
          }
          textContentType="none"
          theme="light"
          underlineColorAndroid="transparent"
          value=""
        />
      </View>
    </View>
    <View
      style={
        Object {
          "flexDirection": "row",
        }
      }
    >
      <View
        style={
          Object {
            "flex": 1,
          }
        }
      >
        <View
          style={
            Object {
              "alignItems": "flex-start",
              "paddingVertical": 4,
            }
          }
        >
          <Text
            style={
              Object {
                "backgroundColor": "transparent",
                "color": "#cc294e",
                "fontFamily": "Roboto",
                "fontSize": 16,
              }
            }
          >
            Error
          </Text>
        </View>
      </View>
    </View>
  </View>
</View>
`;

exports[`completion, renders default 1`] = `
<View>
  <View
    onResponderRelease={[Function]}
    onStartShouldSetResponder={[Function]}
    pointerEvents="auto"
    style={
      Array [
        Object {
          "paddingHorizontal": 16,
        },
      ]
    }
  >
    <View
      style={
        Object {
          "backgroundColor": "transparent",
          "borderBottomColor": "rgba(0, 0, 0, 0.38)",
          "borderBottomWidth": 0.5,
          "height": 64,
          "paddingBottom": 8,
          "paddingTop": 32,
          "zIndex": 1,
        }
      }
    >
      <View
        onLayout={[Function]}
        style={
          Object {
            "position": "absolute",
            "top": 0,
            "transform": Array [
              Object {
                "translateX": 0,
              },
              Object {
                "translateY": 36,
              },
              Object {
                "scale": 1,
              },
            ],
          }
        }
      >
        <Text
          numberOfLines={1}
          style={
            Object {
              "color": "rgba(0, 0, 0, 0.38)",
              "fontFamily": "Roboto",
              "fontSize": 16,
            }
          }
        >
          Name
          <Text
            style={
              Object {
                "color": "#cc294e",
              }
            }
          >
             *
          </Text>
        </Text>
      </View>
      <View
        style={
          Object {
            "flexDirection": "row",
          }
        }
      >
        <TextInput
          affixTextStyle={
            Object {
              "fontFamily": "Roboto",
            }
          }
          allowFontScaling={true}
          autoCapitalize="sentences"
          clearButtonMode="while-editing"
          disableFullscreenUI={true}
          editable={true}
          innerRef={[Function]}
          onBlur={[Function]}
          onChange={[Function]}
          onChangeText={[Function]}
          onContentSizeChange={[Function]}
          onFocus={[Function]}
          rejectResponderTermination={true}
          renderAdditionalHint={[Function]}
          selectionColor="#146ac4"
          style={
            Array [
              Object {
                "flex": 1,
                "margin": 0,
                "padding": 0,
                "top": 2,
              },
              Object {
                "color": "rgba(0, 0, 0, 0.87)",
                "fontSize": 16,
                "height": 24,
                "textAlign": "left",
              },
              undefined,
            ]
          }
          textContentType="none"
          theme="light"
          underlineColorAndroid="transparent"
          value=""
        />
      </View>
    </View>
    <View
      style={
        Object {
          "flexDirection": "row",
          "paddingVertical": 4,
        }
      }
    />
  </View>
</View>
`;

exports[`completion, renders disabled 1`] = `
<View>
  <View
    onResponderRelease={[Function]}
    onStartShouldSetResponder={[Function]}
    pointerEvents="none"
    style={
      Array [
        Object {
          "paddingHorizontal": 16,
        },
      ]
    }
  >
    <View
      style={
        Object {
          "backgroundColor": "transparent",
          "height": 64,
          "overflow": "hidden",
          "paddingBottom": 8,
          "paddingTop": 32,
          "zIndex": 1,
        }
      }
    >
      <View
        pointerEvents="none"
        style={
          Array [
            Object {
              "borderRadius": 2.220446049250313e-16,
              "position": "absolute",
            },
            Object {
              "borderColor": "rgba(0, 0, 0, 0.12)",
              "borderStyle": "dotted",
              "borderWidth": 1,
              "bottom": 0,
              "left": -1.5,
              "right": -1.5,
              "top": -2,
            },
          ]
        }
      />
      <View
        onLayout={[Function]}
        style={
          Object {
            "position": "absolute",
            "top": 0,
            "transform": Array [
              Object {
                "translateX": 0,
              },
              Object {
                "translateY": 36,
              },
              Object {
                "scale": 1,
              },
            ],
          }
        }
      >
        <Text
          numberOfLines={1}
          style={
            Object {
              "color": "rgba(0, 0, 0, 0.122)",
              "fontFamily": "Roboto",
              "fontSize": 16,
            }
          }
        >
          Name
          <Text
            style={
              Object {
                "color": "#cc294e",
              }
            }
          >
             *
          </Text>
        </Text>
      </View>
      <View
        style={
          Object {
            "flexDirection": "row",
          }
        }
      >
        <TextInput
          affixTextStyle={
            Object {
              "fontFamily": "Roboto",
            }
          }
          allowFontScaling={true}
          autoCapitalize="sentences"
          clearButtonMode="while-editing"
          disableFullscreenUI={true}
          editable={false}
          innerRef={[Function]}
          onBlur={[Function]}
          onChange={[Function]}
          onChangeText={[Function]}
          onContentSizeChange={[Function]}
          onFocus={[Function]}
          rejectResponderTermination={true}
          renderAdditionalHint={[Function]}
          selectionColor="#146ac4"
          style={
            Array [
              Object {
                "flex": 1,
                "margin": 0,
                "padding": 0,
                "top": 2,
              },
              Object {
                "color": "rgba(0, 0, 0, 0.12)",
                "fontSize": 16,
                "height": 24,
                "textAlign": "left",
              },
              undefined,
            ]
          }
          textContentType="none"
          theme="light"
          underlineColorAndroid="transparent"
          value=""
        />
      </View>
    </View>
    <View
      style={
        Object {
          "flexDirection": "row",
          "paddingVertical": 4,
        }
      }
    />
  </View>
</View>
`;

exports[`completion, renders error 1`] = `
<View>
  <View
    onResponderRelease={[Function]}
    onStartShouldSetResponder={[Function]}
    pointerEvents="auto"
    style={
      Array [
        Object {
          "paddingHorizontal": 16,
        },
      ]
    }
  >
    <View
      style={
        Object {
          "backgroundColor": "transparent",
          "borderBottomColor": "rgba(204, 41, 78, 1)",
          "borderBottomWidth": 2,
          "height": 64,
          "paddingBottom": 8,
          "paddingTop": 32,
          "zIndex": 1,
        }
      }
    >
      <View
        onLayout={[Function]}
        style={
          Object {
            "position": "absolute",
            "top": 0,
            "transform": Array [
              Object {
                "translateX": 0,
              },
              Object {
                "translateY": 36,
              },
              Object {
                "scale": 1,
              },
            ],
          }
        }
      >
        <Text
          numberOfLines={1}
          style={
            Object {
              "color": "rgba(204, 41, 78, 1)",
              "fontFamily": "Roboto",
              "fontSize": 16,
            }
          }
        >
          Name
          <Text
            style={
              Object {
                "color": "#cc294e",
              }
            }
          >
             *
          </Text>
        </Text>
      </View>
      <View
        style={
          Object {
            "flexDirection": "row",
          }
        }
      >
        <TextInput
          affixTextStyle={
            Object {
              "fontFamily": "Roboto",
            }
          }
          allowFontScaling={true}
          autoCapitalize="sentences"
          clearButtonMode="while-editing"
          disableFullscreenUI={true}
          editable={true}
          error="This field is required!"
          innerRef={[Function]}
          onBlur={[Function]}
          onChange={[Function]}
          onChangeText={[Function]}
          onContentSizeChange={[Function]}
          onFocus={[Function]}
          rejectResponderTermination={true}
          renderAdditionalHint={[Function]}
          selectionColor="#146ac4"
          style={
            Array [
              Object {
                "flex": 1,
                "margin": 0,
                "padding": 0,
                "top": 2,
              },
              Object {
                "color": "rgba(0, 0, 0, 0.87)",
                "fontSize": 16,
                "height": 24,
                "textAlign": "left",
              },
              undefined,
            ]
          }
          textContentType="none"
          theme="light"
          underlineColorAndroid="transparent"
          value=""
        />
      </View>
    </View>
    <View
      style={
        Object {
          "flexDirection": "row",
        }
      }
    >
      <View
        style={
          Object {
            "flex": 1,
          }
        }
      >
        <View
          style={
            Object {
              "alignItems": "flex-start",
              "paddingVertical": 4,
            }
          }
        >
          <Text
            style={
              Object {
                "backgroundColor": "transparent",
                "color": "#cc294e",
                "fontFamily": "Roboto",
                "fontSize": 12,
              }
            }
          >
            This field is required!
          </Text>
        </View>
      </View>
    </View>
  </View>
</View>
`;

exports[`completion, renders error with hint 1`] = `
<View>
  <View
    onResponderRelease={[Function]}
    onStartShouldSetResponder={[Function]}
    pointerEvents="auto"
    style={
      Array [
        Object {
          "paddingHorizontal": 16,
        },
      ]
    }
  >
    <View
      style={
        Object {
          "backgroundColor": "transparent",
          "borderBottomColor": "rgba(204, 41, 78, 1)",
          "borderBottomWidth": 2,
          "height": 64,
          "paddingBottom": 8,
          "paddingTop": 32,
          "zIndex": 1,
        }
      }
    >
      <View
        onLayout={[Function]}
        style={
          Object {
            "position": "absolute",
            "top": 0,
            "transform": Array [
              Object {
                "translateX": 0,
              },
              Object {
                "translateY": 36,
              },
              Object {
                "scale": 1,
              },
            ],
          }
        }
      >
        <Text
          numberOfLines={1}
          style={
            Object {
              "color": "rgba(204, 41, 78, 1)",
              "fontFamily": "Roboto",
              "fontSize": 16,
            }
          }
        >
          Name
          <Text
            style={
              Object {
                "color": "#cc294e",
              }
            }
          >
             *
          </Text>
        </Text>
      </View>
      <View
        style={
          Object {
            "flexDirection": "row",
          }
        }
      >
        <TextInput
          affixTextStyle={
            Object {
              "fontFamily": "Roboto",
            }
          }
          allowFontScaling={true}
          autoCapitalize="sentences"
          clearButtonMode="while-editing"
          disableFullscreenUI={true}
          editable={true}
          error="This field is required!"
          innerRef={[Function]}
          onBlur={[Function]}
          onChange={[Function]}
          onChangeText={[Function]}
          onContentSizeChange={[Function]}
          onFocus={[Function]}
          rejectResponderTermination={true}
          renderAdditionalHint={[Function]}
          selectionColor="#146ac4"
          style={
            Array [
              Object {
                "flex": 1,
                "margin": 0,
                "padding": 0,
                "top": 2,
              },
              Object {
                "color": "rgba(0, 0, 0, 0.87)",
                "fontSize": 16,
                "height": 24,
                "textAlign": "left",
              },
              undefined,
            ]
          }
          textContentType="none"
          theme="light"
          underlineColorAndroid="transparent"
          value=""
        />
      </View>
    </View>
    <View
      style={
        Object {
          "flexDirection": "row",
        }
      }
    >
      <View
        style={
          Object {
            "flex": 1,
          }
        }
      >
        <View
          style={
            Object {
              "alignItems": "flex-start",
              "paddingVertical": 4,
            }
          }
        >
          <Text
            style={
              Object {
                "backgroundColor": "transparent",
                "color": "#cc294e",
                "fontFamily": "Roboto",
                "fontSize": 12,
              }
            }
          >
            This field is required!
          </Text>
        </View>
      </View>
    </View>
  </View>
</View>
`;

exports[`completion, renders hint 1`] = `
<View>
  <View
    onResponderRelease={[Function]}
    onStartShouldSetResponder={[Function]}
    pointerEvents="auto"
    style={
      Array [
        Object {
          "paddingHorizontal": 16,
        },
      ]
    }
  >
    <View
      style={
        Object {
          "backgroundColor": "transparent",
          "borderBottomColor": "rgba(0, 0, 0, 0.38)",
          "borderBottomWidth": 0.5,
          "height": 64,
          "paddingBottom": 8,
          "paddingTop": 32,
          "zIndex": 1,
        }
      }
    >
      <View
        onLayout={[Function]}
        style={
          Object {
            "position": "absolute",
            "top": 0,
            "transform": Array [
              Object {
                "translateX": 0,
              },
              Object {
                "translateY": 36,
              },
              Object {
                "scale": 1,
              },
            ],
          }
        }
      >
        <Text
          numberOfLines={1}
          style={
            Object {
              "color": "rgba(0, 0, 0, 0.38)",
              "fontFamily": "Roboto",
              "fontSize": 16,
            }
          }
        >
          Name
          <Text
            style={
              Object {
                "color": "#cc294e",
              }
            }
          >
             *
          </Text>
        </Text>
      </View>
      <View
        style={
          Object {
            "flexDirection": "row",
          }
        }
      >
        <TextInput
          affixTextStyle={
            Object {
              "fontFamily": "Roboto",
            }
          }
          allowFontScaling={true}
          autoCapitalize="sentences"
          clearButtonMode="while-editing"
          disableFullscreenUI={true}
          editable={true}
          innerRef={[Function]}
          onBlur={[Function]}
          onChange={[Function]}
          onChangeText={[Function]}
          onContentSizeChange={[Function]}
          onFocus={[Function]}
          rejectResponderTermination={true}
          renderAdditionalHint={[Function]}
          selectionColor="#146ac4"
          style={
            Array [
              Object {
                "flex": 1,
                "margin": 0,
                "padding": 0,
                "top": 2,
              },
              Object {
                "color": "rgba(0, 0, 0, 0.87)",
                "fontSize": 16,
                "height": 24,
                "textAlign": "left",
              },
              undefined,
            ]
          }
          textContentType="none"
          theme="light"
          underlineColorAndroid="transparent"
          value=""
        />
      </View>
    </View>
    <View
      style={
        Object {
          "flexDirection": "row",
        }
      }
    >
      <View
        style={
          Object {
            "flex": 1,
          }
        }
      >
        <View
          style={
            Object {
              "alignItems": "flex-start",
              "paddingVertical": 4,
            }
          }
        >
          <Text
            style={
              Object {
                "backgroundColor": "transparent",
                "color": "rgba(0, 0, 0, 0.38)",
                "fontFamily": "Roboto",
                "fontSize": 12,
              }
            }
          >
            Test hint
          </Text>
        </View>
      </View>
    </View>
  </View>
</View>
`;

exports[`completion, renders not required 1`] = `
<View>
  <View
    onResponderRelease={[Function]}
    onStartShouldSetResponder={[Function]}
    pointerEvents="auto"
    style={
      Array [
        Object {
          "paddingHorizontal": 16,
        },
      ]
    }
  >
    <View
      style={
        Object {
          "backgroundColor": "transparent",
          "borderBottomColor": "rgba(0, 0, 0, 0.38)",
          "borderBottomWidth": 0.5,
          "height": 64,
          "paddingBottom": 8,
          "paddingTop": 32,
          "zIndex": 1,
        }
      }
    >
      <View
        onLayout={[Function]}
        style={
          Object {
            "position": "absolute",
            "top": 0,
            "transform": Array [
              Object {
                "translateX": 0,
              },
              Object {
                "translateY": 36,
              },
              Object {
                "scale": 1,
              },
            ],
          }
        }
      >
        <Text
          numberOfLines={1}
          style={
            Object {
              "color": "rgba(0, 0, 0, 0.38)",
              "fontFamily": "Roboto",
              "fontSize": 16,
            }
          }
        >
          Name
        </Text>
      </View>
      <View
        style={
          Object {
            "flexDirection": "row",
          }
        }
      >
        <TextInput
          affixTextStyle={
            Object {
              "fontFamily": "Roboto",
            }
          }
          allowFontScaling={true}
          autoCapitalize="sentences"
          clearButtonMode="while-editing"
          disableFullscreenUI={true}
          editable={true}
          innerRef={[Function]}
          onBlur={[Function]}
          onChange={[Function]}
          onChangeText={[Function]}
          onContentSizeChange={[Function]}
          onFocus={[Function]}
          rejectResponderTermination={true}
          renderAdditionalHint={[Function]}
          selectionColor="#146ac4"
          style={
            Array [
              Object {
                "flex": 1,
                "margin": 0,
                "padding": 0,
                "top": 2,
              },
              Object {
                "color": "rgba(0, 0, 0, 0.87)",
                "fontSize": 16,
                "height": 24,
                "textAlign": "left",
              },
              undefined,
            ]
          }
          textContentType="none"
          theme="light"
          underlineColorAndroid="transparent"
          value=""
        />
      </View>
    </View>
    <View
      style={
        Object {
          "flexDirection": "row",
          "paddingVertical": 4,
        }
      }
    />
  </View>
</View>
`;

exports[`completion, renders required 1`] = `
<View>
  <View
    onResponderRelease={[Function]}
    onStartShouldSetResponder={[Function]}
    pointerEvents="auto"
    style={
      Array [
        Object {
          "paddingHorizontal": 16,
        },
      ]
    }
  >
    <View
      style={
        Object {
          "backgroundColor": "transparent",
          "borderBottomColor": "rgba(0, 0, 0, 0.38)",
          "borderBottomWidth": 0.5,
          "height": 64,
          "paddingBottom": 8,
          "paddingTop": 32,
          "zIndex": 1,
        }
      }
    >
      <View
        onLayout={[Function]}
        style={
          Object {
            "position": "absolute",
            "top": 0,
            "transform": Array [
              Object {
                "translateX": 0,
              },
              Object {
                "translateY": 36,
              },
              Object {
                "scale": 1,
              },
            ],
          }
        }
      >
        <Text
          numberOfLines={1}
          style={
            Object {
              "color": "rgba(0, 0, 0, 0.38)",
              "fontFamily": "Roboto",
              "fontSize": 16,
            }
          }
        >
          Name
          <Text
            style={
              Object {
                "color": "#cc294e",
              }
            }
          >
             *
          </Text>
        </Text>
      </View>
      <View
        style={
          Object {
            "flexDirection": "row",
          }
        }
      >
        <TextInput
          affixTextStyle={
            Object {
              "fontFamily": "Roboto",
            }
          }
          allowFontScaling={true}
          autoCapitalize="sentences"
          clearButtonMode="while-editing"
          disableFullscreenUI={true}
          editable={true}
          innerRef={[Function]}
          onBlur={[Function]}
          onChange={[Function]}
          onChangeText={[Function]}
          onContentSizeChange={[Function]}
          onFocus={[Function]}
          rejectResponderTermination={true}
          renderAdditionalHint={[Function]}
          selectionColor="#146ac4"
          style={
            Array [
              Object {
                "flex": 1,
                "margin": 0,
                "padding": 0,
                "top": 2,
              },
              Object {
                "color": "rgba(0, 0, 0, 0.87)",
                "fontSize": 16,
                "height": 24,
                "textAlign": "left",
              },
              undefined,
            ]
          }
          textContentType="none"
          theme="light"
          underlineColorAndroid="transparent"
          value=""
        />
      </View>
    </View>
    <View
      style={
        Object {
          "flexDirection": "row",
          "paddingVertical": 4,
        }
      }
    />
  </View>
</View>
`;

exports[`completion, renders value 1`] = `
<View>
  <View
    onResponderRelease={[Function]}
    onStartShouldSetResponder={[Function]}
    pointerEvents="auto"
    style={
      Array [
        Object {
          "paddingHorizontal": 16,
        },
      ]
    }
  >
    <View
      style={
        Object {
          "backgroundColor": "transparent",
          "borderBottomColor": "rgba(0, 0, 0, 0.38)",
          "borderBottomWidth": 0.5,
          "height": 64,
          "paddingBottom": 8,
          "paddingTop": 32,
          "zIndex": 1,
        }
      }
    >
      <View
        onLayout={[Function]}
        style={
          Object {
            "position": "absolute",
            "top": 0,
            "transform": Array [
              Object {
                "translateX": 0,
              },
              Object {
                "translateY": 13.600000000000001,
              },
              Object {
                "scale": 0.75,
              },
            ],
          }
        }
      >
        <Text
          numberOfLines={1}
          style={
            Object {
              "color": "rgba(0, 0, 0, 0.38)",
              "fontFamily": "Roboto",
              "fontSize": 16,
            }
          }
        >
          Name
          <Text
            style={
              Object {
                "color": "#cc294e",
              }
            }
          >
             *
          </Text>
        </Text>
      </View>
      <View
        style={
          Object {
            "flexDirection": "row",
          }
        }
      >
        <TextInput
          affixTextStyle={
            Object {
              "fontFamily": "Roboto",
            }
          }
          allowFontScaling={true}
          autoCapitalize="sentences"
          clearButtonMode="while-editing"
          disableFullscreenUI={true}
          editable={true}
          innerRef={[Function]}
          onBlur={[Function]}
          onChange={[Function]}
          onChangeText={[Function]}
          onContentSizeChange={[Function]}
          onFocus={[Function]}
          rejectResponderTermination={true}
          renderAdditionalHint={[Function]}
          selectionColor="#146ac4"
          style={
            Array [
              Object {
                "flex": 1,
                "margin": 0,
                "padding": 0,
                "top": 2,
              },
              Object {
                "color": "rgba(0, 0, 0, 0.87)",
                "fontSize": 16,
                "height": 24,
                "textAlign": "left",
              },
              undefined,
            ]
          }
          textContentType="none"
          theme="light"
          underlineColorAndroid="transparent"
          value="12345"
        />
      </View>
    </View>
    <View
      style={
        Object {
          "flexDirection": "row",
          "paddingVertical": 4,
        }
      }
    />
  </View>
</View>
`;
